# PeacoQC

./: README.md
.github/workflows/: ci.yml  publish.yml
python/: .gitignore  README.md  pyproject.toml
python/docs/: Makefile  quickstart.md
python/docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst  vignette.ipynb
python/src/peacoqc/: __init__.py  _utils.py  binning.py  consecutive.py  doublets.py  heatmap.py  io.py  margins.py  outliers.py  peaks.py  plotting.py  qc.py  report.py  results.py  signal_stability.py
python/tests/: conftest.py  test_binning.py  test_consecutive.py  test_doublets.py  test_heatmap.py  test_io.py  test_margins.py  test_outliers.py  test_parity_111.py  test_peaks.py  test_plotting.py  test_qc_e2e.py  test_write_fcs.py
python/tests/fixtures/: gen_r_reference.R
